Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,8 @@
     }
    ],
    "source": [
-    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n"
+    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
+    "f"
    ]
   },
   {
