Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -711,7 +711,8 @@
    "source": [
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "n_rows = len(f.readlines())\n",
-    "f = open()"
+    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
+    "n_cols ="
    ]
   },
   {
