Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,7 @@
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "n_rows = len(f.readlines())\n",
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
-    "n_cols ="
+    "n_cols = f.readline().spl"
    ]
   },
   {
