Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for line i"
+    "f = open('Data/Yelp_Reviews_Corrupt.csv')"
    ]
   },
   {
