--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('Data/Yelp_Reviews_Corrupt.csv')"
+    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
+    "for line in f:\n",
+    "    try:\n",
+    "        "
    ]
   },
   {
