--- a/index.ipynb
+++ b/index.ipynb
@@ -711,6 +711,7 @@
    "outputs": [],
    "source": [
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
+    "ignore\n",
     "for line in f:\n",
     "    try:\n",
     "        df = "
