--- a/index.ipynb
+++ b/index.ipynb
@@ -714,7 +714,7 @@
     "ignores = []\n",
     "for line in f:\n",
     "    try:\n",
-    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.')"
+    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv')"
    ]
   },
   {
