Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -710,9 +710,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "ignores = []\n",
-    "for line in f:\n",
+    "for i in :\n",
     "    try:\n",
     "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv')"
    ]
