--- a/index.ipynb
+++ b/index.ipynb
@@ -711,7 +711,7 @@
    "outputs": [],
    "source": [
     "ignores = []\n",
-    "for i in :\n",
+    "for i in range(n_rows):\n",
     "    try:\n",
     "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv')"
    ]
