Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -713,7 +713,7 @@
     "ignores = []\n",
     "for i in range(n_rows):\n",
     "    try:\n",
-    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprow)"
+    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,)"
    ]
   },
   {
