--- a/index.ipynb
+++ b/index.ipynb
@@ -711,9 +711,9 @@
    "outputs": [],
    "source": [
     "ignores = []\n",
-    "for i in range(n_rows):\n",
+    "for i in range(1,n_rows+):\n",
     "    try:\n",
-    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,)"
+    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)"
    ]
   },
   {
