--- a/index.ipynb
+++ b/index.ipynb
@@ -711,9 +711,10 @@
    "outputs": [],
    "source": [
     "ignores = []\n",
-    "for i in range(1,n_rows+):\n",
+    "for i in range(1,n_rows+1):\n",
     "    try:\n",
-    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)"
+    "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)\n",
+    "    except Excepti"
    ]
   },
   {
