--- a/index.ipynb
+++ b/index.ipynb
@@ -714,7 +714,9 @@
     "for i in range(1,n_rows+1):\n",
     "    try:\n",
     "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)\n",
-    "    except Excepti"
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        ignores.append()"
    ]
   },
   {
