Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -716,7 +716,7 @@
     "        df = pd.read_csv('/Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)\n",
     "    except Exception as e:\n",
     "        print(e)\n",
-    "        ignores.append()"
+    "        ignores.append(i)"
    ]
   },
   {
