--- a/index.ipynb
+++ b/index.ipynb
@@ -9197,7 +9197,7 @@
     }
    ],
    "source": [
-    "f \n",
+    "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "ignores = []\n",
     "for i in range(1,n_rows+1):\n",
     "    try:\n",
