--- a/index.ipynb
+++ b/index.ipynb
@@ -9199,7 +9199,7 @@
    "source": [
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "ignores = []\n",
-    "for i in range(1,n_rows+1):\n",
+    "for line in enf:\n",
     "    try:\n",
     "        df = pd.read_csv('Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)\n",
     "    except Exception as e:\n",
