--- a/index.ipynb
+++ b/index.ipynb
@@ -9199,7 +9199,7 @@
    "source": [
     "f = open('Data/Yelp_Reviews_Corrupt.csv')\n",
     "ignores = []\n",
-    "for line in enf:\n",
+    "for line in enumerate(f):\n",
     "    try:\n",
     "        df = pd.read_csv('Data/Yelp_Reviews_Corrupt.csv',skiprows=ignores,nrows=i)\n",
     "    except Exception as e:\n",
